--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,5 +1,6 @@
 <header>
 <h1>you are visiting --- {{pageTitle}}</h1>
 <p><a href="/">Home</a></p>
+<p><a href="/project">Project</a></p>
 <p><a href="/about">About</a></p>
 </header>
